# ocascripts

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ocascripts/: fitscollect.py  fitscollectcalib.py  fitscollectdownloader.py  fitscollectjson.py  fitscollectlist.py  fitscollectparquet.py  fitsheader  fitsheader.py  fitslist  fitslist.py  ocadb-downloader.py
tests/: test_cli_tools.py  test_fitscollectparquet_glob_filters.py  test_night_filter.py  test_output_processor.py
