[tool.poetry]
name = "ocascripts"
version = "0.2.0"
description = ""
authors = ["MMME team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"


[tool.poetry.scripts]
fitscollect = "ocascripts.fitscollect:main"
fitsheader = "ocascripts.fitheader:main"
fitslist = "ocascripts.fitslist:main"
ocadb-downloader = "ocascripts.ocadb-downloader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
