[tool.poetry]
name = "ocascripts"
version = "0.2.0"
description = ""
authors = ["MMME team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.scripts]
fitscollect = "ocascripts.fitscollect:main"
fitsheader = "ocascripts.fitsheader:main"
fitslist = "ocascripts.fitslist:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
