[tool.poetry]
name = "ocascripts"
version = "0.3.0"
description = ""
authors = ["MMME team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"

[tool.poetry.extras]
parquet = ["pandas", "pyarrow"]

[tool.poetry.dependencies.pandas]
version = ">=1.5"
optional = true

[tool.poetry.dependencies.pyarrow]
version = ">=10.0"
optional = true

[tool.poetry.scripts]
fitscollect = "ocascripts.fitscollect:main"
fitscollectcalib = "ocascripts.fitscollectcalib:main"
fitscollectjson = "ocascripts.fitscollectjson:main"
fitscollectlist = "ocascripts.fitscollectlist:main"
fitscollectparquet = "ocascripts.fitscollectparquet:main"
fitsheader = "ocascripts.fitsheader:main"
fitslist = "ocascripts.fitslist:main"
ocadb-downloader = "ocascripts.ocadb-downloader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
